--- a/styles/style.scss
+++ b/styles/style.scss
@@ -6,7 +6,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    overflow-y: hidden;
+    
    
 }
 html{
@@ -16,7 +16,8 @@ html{
         rgba(87,111,230,1) 25%, 
         rgba(152,68,183,1) 51%, 
         rgba(255,53,127,1) 100%
-  );  
+  ); 
+  overflow-x: hidden; 
 
 }
 body{
